--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- This is comment-->
-    <p>This is paragraph for html test</p>
+    <p>This is paragraph</p>
     <button><a href="heading.html"> Headings</a></button>
     <button><a href="form.html"> contact</a></button>
 
